@@ -372,7 +372,7 @@
       <module id="evolution-exchange" branch="gnome-2-18"/>
       <module id="evolution-webcal" branch="gnome-2-18"/>
       <module id="fast-user-switch-applet"/>
-      <module id="file-roller"/>
+      <module id="file-roller" branch="gnome-2-18"/>
       <module id="gcalctool" branch="gnome-2-18"/>
       <module id="gconf-editor"/>
       <module id="gdm2" branch="gnome-2-18"/>
