@@ -1,6 +1,11 @@
 2007-03-31  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
+	* releases.xml.in: Branched file-roller for 2.18.
+
+2007-03-31  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in: Added a bunch of new modules in extras.
 	Fixes bug #424811.
 
